fixed mobile presidents

--- a/styles.css
+++ b/styles.css
@@ -109,6 +109,17 @@ body {
 .content-text {
     text-align: justify;
 }
+
+@media screen and (max-width: 600px) {
+  .content-container {
+    flex-direction: column;
+  }
+
+  .content {
+    margin: 0 10px;
+    margin-bottom: 20px;
+  }
+}
         .menu-container {
             display: flex;
             flex-direction: column;
